--- a/index.html
+++ b/index.html
@@ -2,24 +2,25 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>GifTastic</title>
+    <meta charset="utf-8">
+    <title>GifTastic</title>
 </head>
 
 <body>
     <div class="container">
         <h1>GifTastic</h1>
         <form id="gif-form">
-          <label for="gif-input">Add a gif you like!</label>
-          <input type="text" id="gif-input">
-          <br>
-          <input id="add-gif" type="submit" value="Let's do this!">
+            <label for="gif-input">Add a gif you like!</label>
+            <input type="text" id="gif-input">
+            <br>
+            <input id="add-gif" type="submit" value="Let's do this!">
+            <button type="clear" id="clear-button">Clear all</button>
         </form>
         <div id="gif-container"></div>
-    
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="assets/gif.js"></script>
- 
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="assets/gif.js"></script>
+
 </body>
 
 </html>
