add button for each animal

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
             <input type="text" id="gif-input">
             <br>
             <input id="add-gif" type="submit" value="Let's do this!">
-            <button type="clear" id="clear-button">Clear all</button>
+            <input type="button" id="clear-button" value="Clear all!">
         </form>
+        <div id="button-container"></div>
         <div id="gif-container"></div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
