add style and responsive grid

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>GifTastic</title>
+    <link rel="stylesheet" href="assets/style.css"/>
 </head>
 
 <body>
@@ -12,7 +13,6 @@
         <form id="gif-form">
             <label for="gif-input">Add a gif you like!</label>
             <input type="text" id="gif-input">
-            <br>
             <input id="add-gif" type="submit" value="Let's do this!">
             <input type="button" id="clear-button" value="Clear all!">
         </form>
