correctly handle empty input

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <div class="container">
         <h1>GifTastic</h1>
         <form id="gif-form">
-            <label for="gif-input">Add a gif you like!</label>
+            <label for="gif-input">Add an animal you like!</label>
             <input type="text" id="gif-input">
-            <input id="add-gif" type="submit" value="Let's do this!">
+            <input id="add-gif" type="submit" value="Let's find one!">
             <input type="button" id="clear-button" value="Clear all!">
         </form>
+        <div id="user-interaction"></div>
         <div id="button-container"></div>
         <div id="gif-container"></div>
 
