--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta charset="utf-8">
     <title>GifTastic</title>
     <link rel="stylesheet" href="assets/style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
-        <h1>GifTastic</h1>
+        <div id="navBar">
+         <img id="nav_img" src="assets/images/49013.svg" width="100px" height="100px"> 
+        <h1> GifTastic</h1> 
+        </div>
         <form id="gif-form">
             <label for="gif-input">Add an animal you like!</label>
             <input type="text" id="gif-input">
