changed navbar style

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
     <div class="container">
         <div id="navBar">
-            <img id="nav_img" src="assets/images/49013.svg" width="100px" height="100px">
+            <img id="nav-img-right" src="assets/images/33a9b-nyan.gif">
             <h1> GifTastic</h1>
+            <img id="nav-img-left" src="assets/images/lovebot.gif" width="40px" height="50px">
         </div>
         <form id="gif-form">
             <label for="gif-input">Add an animal you like!</label>
@@ -24,6 +25,9 @@
         <div id="user-interaction"></div>
         <div id="button-container"></div>
         <div id="gif-container"></div>
+        
+        <div id="footer">
+        </div>
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="assets/gif.js"></script>
